<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_Texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:accessibilityHeading="false"
        android:fontFamily="sans-serif"
        android:text="@string/minombre"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/sw_Negrita"
            android:textOn="@string/si"
            android:textOff="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/negrita" />

        <CheckBox
            android:id="@+id/cb_Cursiva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cursiva" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_Fuente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuente" />

        <RadioGroup
            android:id="@+id/rgb_Fuentes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_Sans"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sans" />

            <RadioButton
                android:id="@+id/rb_Serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/serif" />

            <RadioButton
                android:id="@+id/rb_Monospace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monospace" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_TextoFuente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tamanyo" />

            <TextView
                android:id="@+id/tv_TamanyoFuente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="Tamaño" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/sb_Tamanyo"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            app:tickMarkTint="@color/design_default_color_primary_dark" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/bt_ColorTexto"
            android:layout_width="wrap_content"
            android:layout_height="91dp"
            android:layout_weight="1"
            android:drawableStart="@mipmap/colortexto_foreground"
            android:text="@string/color_de_texto"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/colortexto_foreground" />

        <Button
            android:id="@+id/bt_ColorFondo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@mipmap/fondotexto"
            android:text="@string/color_de_fondo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/fondotexto_round" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50121653" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>